<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task Planner</string>
    <string name="action_settings">Settings</string>
	<string name="txt_task_lable">Task Description</string>
	<string name="txt_notes_label">Notes</string>
	<string name="txt_is_important">Is this task Important?</string>
	<string name="txt_yes">Yes</string>
	<string name="txt_no">No</string>
	<string name="txt_is_urgent">Is this task Urgent?</string>
	<string name="txt_add">Add</string>
	<string name="txt_cancel">Cancel</string>
	<string name="txt_add_task">Add Task</string>
</resources>
